<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.8">
  <DUT Name="E_Besturingsmodus" Id="{d56b8130-e794-4c5b-a56e-a85a024c3db8}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE E_Besturingsmodus :
(
	uitlaten := 0,
	uitmalen,
	inmalen
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>