<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="E_OpenDichtKlepState" Id="{f5cf42be-d114-41d2-a6c4-b78bebd8a62b}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE E_OpenDichtKlepState :
(
	closed := 0,
	open,
	closing,
	opening,
	error
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>