<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.8">
  <DUT Name="E_PompState" Id="{3f877edf-eeac-46f1-8171-6481184ce88e}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE E_PompState :
(
	off := 0,
	on,
	optoeren,
	aftoeren,
	error
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>