<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.8">
  <POU Name="FB_Inmalen" Id="{96114e51-ad37-44de-ac67-1fd4ce3f2d17}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Inmalen
VAR
	CurrentModus : E_Besturingsmodus := E_Besturingsmodus.uitlaten;
	KlepV2012 : ITF_OpenDichtKlep;
	KlepV2014 : ITF_OpenDichtKlep;
	KlepV2021 : ITF_OpenDichtKlep;
	KlepV2023 : ITF_OpenDichtKlep;
	KlepV2024 : ITF_OpenDichtKlep;
	KlepV2025 : ITF_OpenDichtKlep;
	KlepV2026 : ITF_OpenDichtKlep;
	
	SchuifV2013_AFG : ITF_Regelschuif;
	SchuifV2022_AFG : ITF_Regelschuif;
	
	SchuifV2013_DG : ITF_Regelschuif;
	SchuifV2022_DG : ITF_Regelschuif;
	
	pomp2_P2011 : ITF_Pomp;
	pomp2_P2021 : ITF_Pomp;
	
	pompP2011 : INT;
	pompP2021 : INT;
	
	Ontluchtingsklep : BOOL := FALSE;
	
	firstround : BOOL := FALSE;
	
	timeOut : TON;
	trigger : R_TRIG;
	TimerOn : BOOL := FALSE;
	
	First : BOOL := FALSE;
	
	PompAan : BOOL := FALSE;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//set currentmode to actual mode
CurrentModus:= main.Regelingen.BestuurMode;

IF (CurrentModus = E_Besturingsmodus.uitlaten) OR (CurrentModus = E_Besturingsmodus.uitmalen) THEN
	firstround := FALSE;
	First := FALSE;
	PompAan := FALSE;
END_IF

//Start modus inmalen			
IF CurrentModus = E_Besturingsmodus.inmalen THEN
	
	IF First = FALSE THEN
	//set position kleppen
	KlepV2012.close();
	KlepV2014.close();
	KlepV2021.Close();
	KlepV2024.Close();
	KlepV2025.close();
	KlepV2026.close();
	First := TRUE;
	END_IF
	
	//set position regelschuiven
	SchuifV2013_AFG.RegelSchuifGoTo(0);
	SchuifV2013_DG.RegelSchuifGoTo(0);
	
	IF (KlepV2012.StateKlep = E_OpenDichtKlepState.closed AND
		KlepV2021.StateKlep = E_OpenDichtKlepState.closed AND
		KlepV2024.StateKlep = E_OpenDichtKlepState.closed AND
		KlepV2025.StateKlep = E_OpenDichtKlepState.closed AND
		KlepV2026.StateKlep = E_OpenDichtKlepState.closed AND
		SchuifV2013_AFG.StateRegelSchuif = E_RegelschuifState.standby AND
		SchuifV2013_DG.StateRegelSchuif = E_RegelschuifState.standby) THEN
		
		//set position kleppen and regelschuiven
		KlepV2023.Open();
		SchuifV2022_AFG.RegelSchuifGoTo(100);
		SchuifV2022_DG.RegelSchuifGoTo(100);
		
		IF (KlepV2023.StateKlep = E_OpenDichtKlepState.open AND
			SchuifV2022_AFG.StateRegelSchuif = E_RegelschuifState.standby AND
			SchuifV2022_DG.StateRegelSchuif = E_RegelschuifState.standby) THEN
			
			//Get toerental
			pompP2011 := main.Regelingen.ToerentalP2011;
			pompP2021 := main.Regelingen.ToerentalP2021;
			
			//Set pomp on or off with toerental from regelingen
			pomp2_P2011.PompGoTo(pompP2011);
			pomp2_P2021.PompGoTo(pompP2021);

			IF 	pomp2_P2021.StatePomp = E_PompState.on THEN
				PompAan := TRUE;
			END_IF
		END_IF	
	END_IF	
	//Ontluchtingsklep open and after 10 seconds closed only when 
	IF firstRound = FALSE AND PompAan = TRUE THEN
		KlepV2025.open();
		
		IF KlepV2025.StateKlep = E_OpenDichtKlepState.open THEN
			TimerOn := TRUE;
	
			IF trigger.Q THEN
				KlepV2025.close();
				firstround := TRUE;
				TimerOn := FALSE;
			END_IF
		END_IF
	END_IF
	//timer ontluchtingsklep
	timeOut(IN := TimerOn, PT := T#10S);
	trigger(CLK := (timeOut.Q));
END_IF]]></ST>
    </Implementation>
    <Method Name="FB_init" Id="{292cdf7f-9fce-4ac5-8a23-a71cd6cbd45e}">
      <Declaration><![CDATA[METHOD FB_init : BOOL
VAR_INPUT
	bInitRetains : BOOL; // if TRUE, the retain variables are initialized (warm start / cold start)
	bInCopyCode : BOOL;  // if TRUE, the instance afterwards gets moved into the copy code (online change)
	OpenDichtKlepV2012 : ITF_OpenDichtKlep; 
	OpenDichtKlepV2014 : ITF_OpenDichtKlep; 
	OpenDichtKlepV2021 : ITF_OpenDichtKlep; 
	OpenDichtKlepV2023 : ITF_OpenDichtKlep; 
	OpenDichtKlepV2024 : ITF_OpenDichtKlep;
	OpenDichtKlepV2025 : ITF_OpenDichtKlep; 
	OpenDichtKlepV2026 : ITF_OpenDichtKlep;  
	
	RegelschuifV2013_AFO : ITF_Regelschuif; 
	RegelschuifV2022_AFO : ITF_Regelschuif;
	
	RegelschuifV2013_DG : ITF_Regelschuif;
	RegelschuifV2022_DG : ITF_Regelschuif;
	
	PompP2011 : ITF_Pomp;
	PompP2021 : ITF_Pomp;
	
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[KlepV2012 := OpenDichtKlepV2012;
KlepV2014 := OpenDichtKlepV2014;
KlepV2021 := OpenDichtKlepV2021;
KlepV2023 := OpenDichtKlepV2023;
KlepV2024 := OpenDichtKlepV2024;
KlepV2025 := OpenDichtKlepV2025;
KlepV2026 := OpenDichtKlepV2026;

SchuifV2013_AFG := RegelschuifV2013_AFO;
SchuifV2022_AFG := RegelschuifV2022_AFO;
SchuifV2013_DG := RegelschuifV2013_DG;
SchuifV2022_DG := RegelschuifV2022_DG;

pomp2_P2011 := PompP2011;
pomp2_P2021 := PompP2021;

]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_Inmalen">
      <LineId Id="104" Count="0" />
      <LineId Id="63" Count="0" />
      <LineId Id="117" Count="0" />
      <LineId Id="116" Count="0" />
      <LineId Id="118" Count="0" />
      <LineId Id="252" Count="0" />
      <LineId Id="251" Count="0" />
      <LineId Id="119" Count="0" />
      <LineId Id="106" Count="0" />
      <LineId Id="103" Count="0" />
      <LineId Id="156" Count="0" />
      <LineId Id="213" Count="0" />
      <LineId Id="206" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="109" Count="0" />
      <LineId Id="108" Count="0" />
      <LineId Id="107" Count="0" />
      <LineId Id="67" Count="1" />
      <LineId Id="207" Count="1" />
      <LineId Id="25" Count="0" />
      <LineId Id="114" Count="0" />
      <LineId Id="11" Count="1" />
      <LineId Id="29" Count="1" />
      <LineId Id="62" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="120" Count="1" />
      <LineId Id="36" Count="2" />
      <LineId Id="44" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="45" Count="1" />
      <LineId Id="33" Count="0" />
      <LineId Id="47" Count="2" />
      <LineId Id="51" Count="0" />
      <LineId Id="53" Count="0" />
      <LineId Id="64" Count="0" />
      <LineId Id="52" Count="0" />
      <LineId Id="54" Count="1" />
      <LineId Id="59" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="248" Count="0" />
      <LineId Id="247" Count="0" />
      <LineId Id="249" Count="1" />
      <LineId Id="50" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="274" Count="12" />
      <LineId Id="243" Count="0" />
      <LineId Id="272" Count="1" />
      <LineId Id="230" Count="0" />
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_Inmalen.FB_init">
      <LineId Id="1" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="2" Count="2" />
      <LineId Id="17" Count="1" />
      <LineId Id="5" Count="4" />
      <LineId Id="11" Count="1" />
      <LineId Id="15" Count="0" />
      <LineId Id="13" Count="1" />
    </LineIds>
  </POU>
</TcPlcObject>